gl31-master/src/test/deca/context/invalid/complet/meth_main.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 10: Erreur, pas de méthodes dans main
//
// Historique:
//    cree le 20/01/2021
{
    int methTest(void param1){
        return param1;
    }
}
